--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,4 +1,60 @@
+#header {
+  margin-top: 0;
+  padding: 2%;
+  background-color: rgb(0, 38, 77);
+  color: white;
+}
+
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
-  }
+  font: 1.1em "Century Gothic", Futura, sans-serif;
+  margin: 20px;
+  text-align: center;
+  margin: 0;
+}
+
+.formGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-gap: 30px 30px;
+  margin: 7.5% 0 5% 0;
+}
+
+label {
+  justify-self: end;
+  font-size: 1.1em;
+}
+
+input {
+  width: 25%
+}
+
+#codeLabel {
+  grid-area: 1 / 2 / 1 / 2;
+}
+#codeInput {
+  grid-area: 1 / 3 / 1 / 3;
+}
+#idLabel {
+  grid-area: 2 / 2 / 2 / 2;
+}
+#id {
+  grid-area: 2 / 3 / 2 / 3;
+}
+#sectionLabel {
+  grid-area: 3 / 2 / 3 / 2;
+}
+#section {
+  grid-area: 3 / 3 / 3 / 3;
+}
+#seatTypeLabel {
+  grid-area: 4 / 2 / 4 / 2;
+}
+#seatTypeInput {
+  grid-area: 4 / 3 / 4 / 3;
+}
+
+#submit {
+  width: auto;
+  font-size: 1.05em
+}
