--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -15,7 +15,7 @@ body {
 .formGrid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 30px 30px;
   margin: 7.5% 0 5% 0;
 }
@@ -29,29 +29,41 @@ input {
   width: 25%
 }
 
-#codeLabel {
+#nameLabel {
   grid-area: 1 / 2 / 1 / 2;
 }
-#codeInput {
+#name {
   grid-area: 1 / 3 / 1 / 3;
 }
-#idLabel {
+#phoneNumLabel {
   grid-area: 2 / 2 / 2 / 2;
 }
-#id {
+#phoneNum {
   grid-area: 2 / 3 / 2 / 3;
 }
-#sectionLabel {
+#codeLabel {
   grid-area: 3 / 2 / 3 / 2;
 }
-#section {
+#codeInput {
   grid-area: 3 / 3 / 3 / 3;
 }
-#seatTypeLabel {
+#idLabel {
   grid-area: 4 / 2 / 4 / 2;
 }
-#seatTypeInput {
+#id {
   grid-area: 4 / 3 / 4 / 3;
+}
+#sectionLabel {
+  grid-area: 5 / 2 / 5 / 2;
+}
+#section {
+  grid-area: 5 / 3 / 5 / 3;
+}
+#seatTypeLabel {
+  grid-area: 6 / 2 / 6 / 2;
+}
+#seatTypeInput {
+  grid-area: 6 / 3 / 6 / 3;
 }
 
 #submit {
